--- a/SharePointProject2/SharePointProject2.csproj
+++ b/SharePointProject2/SharePointProject2.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\Class1.cs" />
+    <Compile Include="Version.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Features\Feature1\Feature1.feature">
@@ -82,64 +83,12 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(VSToolsPath)\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Target Name="BeforeBuild">
-    <Message Text="The name of the publish profile is BeforePublish" Importance="High" />
-    <Message Text="$(MSBuildExtensionsPath32)" Importance="High"/>
-  </Target>
   <Target Name="BeforePublish">
     <Message Text="The name of the publish profile is BeforePublish" Importance="High" />
     <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1" />
-    <!--<Message Text="$(command)"/>-->
   </Target>
-  <!--<Target Name="PrePublish" BeforeTargets="Publish">
-    <Message Text="The name of the publish profile is AfterPublish" Importance="High"/>
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1"/>
-  </Target>-->
-  <!--<Target Name="CustomPostPublishActions" AfterTargets="GatherAllFilesToPublish">
-    <Message Text="This is custom target" Importance="high" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1"/>
-  </Target>-->
-  <!--<Target Name="AfterPublish">
-    <Warning Text="publish warning 1" Importance="High"/>
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1"/>
-  </Target>-->
-  <!--<Target Name="MSDeployPublish">
-    <Warning Text="publish warning 1" />
-    <Exec Command="%windir%\sysnative\windowspowershell\v1.0\powershell -file “$(ProjectDir)\Scripts\CreateFolder.ps1"/>
+  <Target Name="BeforeLayout">
+    <Message Text="The name of the publish profile is BeforeLayout" Importance="High" />
+    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1" />
   </Target>
-  
-  <Target Name="CustomTarget" AfterTargets="AfterPublish">
-    <Warning Text="publish warning 2" />
-    <Exec Command="%windir%\sysnative\windowspowershell\v1.0\powershell -file “$(ProjectDir)\Scripts\CreateFolder.ps1"/>
-  </Target>
-  
-  <Target Name="Moose" AfterTargets="GatherAllFilesToPublish" >
-    <Message Importance="high" Text="***Moooooooooooooooose***" />
-    <Exec Command="%windir%\sysnative\windowspowershell\v1.0\powershell -file “$(ProjectDir)\Scripts\CreateFolder.ps1"/>
-  </Target>
-  
-  <Target Name="CustomPostPublishActions" AfterTargets="MSDeployPublish" >
-    <Exec Command="echo Post-PUBLISH event: Active configuration is: $(ConfigurationName)" />
-  </Target>-->
-  <!--<Target Name="BeforeBuild">
-    <Message Text="Should run before build1" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1"/>
-  </Target>-->
-  <!--<Target Name="AfterPublish">
-    <Message Text="Should run after build" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file '$(ProjectDir)Scripts\CreateFolder.ps1'"/>
-  </Target>
-
-  <Target Name="MyCustomTask" BeforeTargets="CoreBuild" >
-    <Message Text="Should run before build" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file '$(ProjectDir)Scripts\CreateFolder.ps1'"/>
-  </Target>
-
-  -->
-  <!-- Replaces AfterBuild target -->
-  <!--
-  <Target Name="AnotherCustomTarget" AfterTargets="CoreCompile">
-    <Message Text="Should run after build" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file '$(ProjectDir)Scripts\CreateFolder.ps1'"/>
-  </Target>-->
 </Project>
