--- a/SharePointProject2/SharePointProject2.csproj
+++ b/SharePointProject2/SharePointProject2.csproj
@@ -55,7 +55,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scripts\Class1.cs" />
     <Compile Include="Version.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,8 +68,9 @@
     <None Include="Package\Package.Template.xml">
       <DependentUpon>Package.package</DependentUpon>
     </None>
-    <None Include="Scripts\CreateFolder.ps1" />
+    <None Include="Scripts\Functions.ps1" />
     <None Include="Scripts\PreBuild.ps1" />
+    <None Include="Scripts\PrePublish.ps1" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -84,12 +84,12 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(VSToolsPath)\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Target Name="BeforePublish">
-    <Message Text="The name of the publish profile is BeforePublish" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1" />
+  <Target Name="BeforeBuild">
+    <Message Text="The name of the publish profile is BeforeBuild" Importance="High" />
+    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\PreBuild.ps1" />
   </Target>
   <Target Name="BeforeLayout">
     <Message Text="The name of the publish profile is BeforeLayout" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\CreateFolder.ps1" />
+    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\PrePublish.ps1" />
   </Target>
 </Project>
