--- a/SharePointProject2/SharePointProject2.csproj
+++ b/SharePointProject2/SharePointProject2.csproj
@@ -87,7 +87,7 @@
   <Target Name="BeforeLayout">
     <Message Text="BeforeLayout(Publish) : Provádím konrolu synchronizace a tagů" Importance="High"/>
     <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\PrePublish.ps1"  ConsoleToMSBuild="true"/>
-    <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
+    <!--<Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />-->
   </Target>
   <!--<Target Name="BeforeBuild">
     <Message Text="BeforeBuild : Provádím konrolu verzování" Importance="High" />
