--- a/SharePointProject3/SharePointProject3.csproj
+++ b/SharePointProject3/SharePointProject3.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,7 +75,7 @@
   </PropertyGroup>
   <Import Project="$(VSToolsPath)\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="BeforeLayout">
-    <Message Text="BeforeLayout(Publish) : Provádím konrolu synchronizace a tagů  $(ProjectDir)" Importance="High" />
+    <Message Text="BeforeLayout(Publish) : Provádím konrolu synchronizace a tagů" Importance="High" />
     <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file $(ProjectDir)Scripts\PrePublish.ps1 $(PublishToFileSystemTargetLocation)" ConsoleToMSBuild="true" />
   </Target>
 </Project>
