--- a/SharePointProject5/SharePointProject5.csproj
+++ b/SharePointProject5/SharePointProject5.csproj
@@ -72,6 +72,6 @@
   <Import Project="$(VSToolsPath)\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="BeforeLayout">
     <Message Text="BeforeLayout(Publish) : Provádím konrolu synchronizace a tagů" Importance="High" />
-    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file ..\Scripts\PrePublish.ps1 $(PublishToFileSystemTargetLocation)" ConsoleToMSBuild="true" />
+    <Exec Command="C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe -file ..\..\Scripts\PrePublish.ps1 $(PublishToFileSystemTargetLocation)" ConsoleToMSBuild="true" />
   </Target>
 </Project>
